Update cldr to v46

--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -1,7 +1,7 @@
 all: build/countries.json
 
 # For country names, we extract these from the CLDR
-cldr_version=30.0.2
+cldr_version=46
 cldr/cldr-core.zip:
 	mkdir -p cldr
 	curl http://unicode.org/Public/cldr/$(cldr_version)/core.zip -o cldr/cldr-core.zip
@@ -10,7 +10,7 @@ cldr/common: cldr/cldr-core.zip
 	cd cldr;\
 		unzip -D cldr-core.zip
 
-build/countries.json: cldr/common
+build/countries.json: cldr/common gen-country-lists.py
 	mkdir -p build
 	./gen-country-lists.py
 
