--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "stylusSupremacy.ignoreFiles": ["src/ogs.styl"],
     "stylusSupremacy.tabStopChar": "    ",
-    "stylusSupremacy.alwaysUseExtends": true
+    "stylusSupremacy.alwaysUseExtends": true,
+    "[stylus]": {
+        "editor.formatOnSave": false
+    }
 }
