--- a/.github/uffizzi/docker-compose.uffizzi.yml
+++ b/.github/uffizzi/docker-compose.uffizzi.yml
@@ -1,22 +1,22 @@
 version: "3"
 
 x-uffizzi:
-  ingress:
-    service: online-go
-    port: 8080
+    ingress:
+        service: online-go
+        port: 8080
 
 services:
-  online-go:
-    image: '${ONLINE_GO_IMAGE}'
-    environment:
-      #OGS_BACKEND: PRODUCTION
-      OGS_BACKEND: BETA
-    # entrypoint:
-    # - "sh"
-    # command:
-    # - "-c"
-    # - "npm run dev"
-    deploy:
-      resources:
-        limits:
-          memory: 4000M
+    online-go:
+        image: "${ONLINE_GO_IMAGE}"
+        environment:
+            #OGS_BACKEND: PRODUCTION
+            OGS_BACKEND: BETA
+        # entrypoint:
+        # - "sh"
+        # command:
+        # - "-c"
+        # - "npm run dev"
+        deploy:
+            resources:
+                limits:
+                    memory: 4000M
