Adding goban and react-dynamic-help as submodules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
+            "goban": ["submodules/goban/src"],
+            "goscorer": ["submodules/goban/src/third_party/goscorer/goscorer"]
         },
 
         "forceConsistentCasingInFileNames": true,
