--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - uses: actions/checkout@v4
-              submodules: recursive
+              with:
+                  submodules: recursive
 
             - uses: actions/setup-node@v4
               with:
