--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -15,10 +15,8 @@ build/countries.json: cldr/common gen-country-lists.py
 	./gen-country-lists.py
 
 dev-run-translation-scripts:
+	# create our ogs.strings.js file 
 	cd ../; npm run build:i18n
-	#cp ../dist/ogs.js build/ogs.strings.js
-	#cp ../dist/ogs.js.map build/ogs.strings.js.map
-	#sed -i 's/ogs.js.map/ogs.strings.js.map/' build/ogs.strings.js
 	python translation-code-replace-for-parsing.py
 	# Create a unified pot file script is run on the translation server typically
 	node create-unified-pot.js llm-translation-extraction
