--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,12 @@ jobs:
                   path: node_modules
                   key: ${{ runner.os }}-node-modules
 
-            - name: npm install
+            - name: npm clean-install
               uses: nick-fields/retry@v3
               with:
                   timeout_minutes: 10
                   max_attempts: 3
-                  command: npm install
+                  command: npm clean-install
 
             - name: Eslint
               run: npm run lint
