Fix things that were preventing jest from running
Except for translate.test.ts which seems to be having troubles with the
way we import goban now.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,8 @@ jobs:
             - name: Build
               run: npm run build
 
-            #- name: Tests
-            #  run: npx jest
+            - name: Tests
+              run: npm run test
 
             - uses: streetsidesoftware/cspell-action@v6
               with:
