--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "lint:fix": "eslint --fix src/",
         "stylus-supremacy": "stylus-supremacy format --replace --options .vscode/settings.json 'src/**/*.styl'",
         "stylus": "stylus --out dist/ --compress --include-css --sourcemap -c src/ogs.styl",
-        "test": "jest",
+        "test": "node --experimental-vm-modules node_modules/.bin/jest",
         "fresh-test": "clear && jest",
         "spellcheck": "cspell \"src/**/*.{ts,tsx}\"",
         "minify-index": "node minify-index.js",
@@ -82,6 +82,7 @@
         "jest": "^29.7.0",
         "jest-chain": "^1.1.6",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-transform-stub": "^2.0.0",
         "lint-staged": "^15.2.2",
         "openai": "^4.57.3",
         "pofile": "^1.1.0",
