Setup Playwright with basic smoke test.  `yarn test:e2e` to run (will fire up frontend dev server locally if it doesn't find one).

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ i18n/prep-import.js
 npm-debug.log
 .yalc
 yalc.lock
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
