Fix test target

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
               run: yarn build-ci
 
             - name: Tests
-              run: yarn smoke-test
+              run: yarn test
 
             - uses: streetsidesoftware/cspell-action@v6
               with:
