Initial mocked up ChallengeModalBody with a few AI generated tests.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "lint:fix": "eslint --fix src/",
         "stylus-supremacy": "stylus-supremacy format --replace --options .vscode/settings.json 'src/**/*.styl'",
         "stylus": "stylus --out dist/ --compress --include-css --sourcemap -c src/ogs.styl",
-        "test": "node scripts/run-playwright.js --grep @Smoke && node --experimental-vm-modules node_modules/.bin/jest",
+        "test": "node --experimental-vm-modules node_modules/.bin/jest",
+        "test:all": "node scripts/run-playwright.js --grep @Smoke && node --experimental-vm-modules node_modules/.bin/jest",
         "fresh-test": "clear && jest",
         "spellcheck": "cspell \"src/**/*.{ts,tsx}\"",
         "minify-index": "node minify-index.js",
@@ -46,6 +47,7 @@
         "@testing-library/dom": "^10.0.4",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^16.1.0",
+        "@testing-library/user-event": "^14.6.1",
         "@tony.ganchev/eslint-plugin-header": "^3.1.2",
         "@types/d3": "^7.4.0",
         "@types/howler": "^2.2.12",
