e2e needs esnext.  Make sure smoke test is run in ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
               run: yarn build-ci
 
             - name: Tests
-              run: yarn test
+              run: yarn test:ci
 
             - uses: streetsidesoftware/cspell-action@v6
               with:
