--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "dev": "vite",
         "vite": "vite",
         "build": "vite build --emptyOutDir && node compile-css.js",
-        "build-ci": "vite build --emptyOutDir && node compile-css.js && playwright install --with-deps",
+        "build-ci": "vite build --emptyOutDir && node compile-css.js",
         "build:i18n": "OGS_I18N_BUILD_MODE=true vite build",
         "type-check": "tsc --skipLibCheck --noEmit",
         "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -21,18 +21,20 @@
         "lint:fix": "eslint --fix src/",
         "stylus-supremacy": "stylus-supremacy format --replace --options .vscode/settings.json 'src/**/*.styl'",
         "stylus": "stylus --out dist/ --compress --include-css --sourcemap -c src/ogs.styl",
-        "test": "node --experimental-vm-modules node_modules/.bin/jest",
-        "test:ci": "CI=true node scripts/run-playwright.js --grep @Smoke && node --experimental-vm-modules node_modules/.bin/jest",
-        "fresh-test": "clear && jest",
         "spellcheck": "cspell \"src/**/*.{ts,tsx}\"",
         "minify-index": "node minify-index.js",
         "dependency-cruiser": "dependency-cruiser src",
         "bundle-visualizer": "vite-bundle-visualizer -c vite.config.ts",
-        "test:e2e:smoke": "node scripts/run-playwright.js --grep @Smoke",
-        "test:e2e": "node scripts/run-playwright.js",
+        "test": "node --experimental-vm-modules node_modules/.bin/jest",
+        "fresh-test": "clear && jest",
+        "test:e2e": "node scripts/run-playwright.js ",   
+        "test:e2e:quick": "node scripts/run-playwright.js --grep-invert \"@Smoke\\|@Slow\"",     
+        "test:e2e:smoke": "yarn test:e2e:docker:smoke",
         "test:e2e:ui": "node scripts/run-playwright.js --ui",
         "test:e2e:debug": "node scripts/run-playwright.js --debug",
-        "test:e2e:docker": "docker run --rm -it --add-host=host.docker.internal:host-gateway -v $(pwd):/app -w /app -e FRONTEND_URL=http://host.docker.internal:8080 mcr.microsoft.com/playwright:v1.51.0-noble npx playwright test"
+        "test:ci": "yarn test:e2e:docker:smoke && node --experimental-vm-modules node_modules/.bin/jest",
+        "test:e2e:docker": "scripts/run-playwright-in-docker.sh",
+        "test:e2e:docker:smoke": "CI=true scripts/run-playwright-in-docker.sh --grep @Smoke"
     },
     "browserslist": [
         "defaults"
