--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
-        # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            # Checks-out the repository under $GITHUB_WORKSPACE
             - uses: actions/checkout@v4
               with:
                   submodules: recursive
+                  lfs: true
 
             - uses: actions/setup-node@v4
               with:
@@ -61,6 +61,17 @@ jobs:
 
             - name: Wait for server
               run: timeout 30 bash -c 'until curl -s http://localhost:8080 > /dev/null; do sleep 1; done'
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Cache Docker layers
+              uses: actions/cache@v4
+              with:
+                  path: /tmp/.buildx-cache
+                  key: ${{ runner.os }}-buildx-${{ github.sha }}
+                  restore-keys: |
+                      ${{ runner.os }}-buildx-
 
             - name: Tests
               run: yarn test:ci
