--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,13 @@ jobs:
             - name: Tests
               run: yarn test:ci
 
+            - name: Upload test results
+              uses: actions/upload-artifact@v4
+              with:
+                name: test-results
+                path: test-results/
+                retention-days: 7
+
             - uses: streetsidesoftware/cspell-action@v6
               with:
                   files: src/**/*.{ts,tsx}
