--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,16 +62,18 @@ jobs:
             - name: Wait for server
               run: timeout 30 bash -c 'until curl -s http://localhost:8080 > /dev/null; do sleep 1; done'
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Cache Docker layers
+            - name: Cache Playwright Docker image
               uses: actions/cache@v4
               with:
-                  path: /tmp/.buildx-cache
-                  key: ${{ runner.os }}-buildx-${{ github.sha }}
-                  restore-keys: |
-                      ${{ runner.os }}-buildx-
+                path: /tmp/playwright-docker
+                key: playwright-docker-v1.51.0
+                restore-keys: playwright-docker-
+
+            - name: Pull Playwright Docker image
+              run: |
+                mkdir -p /tmp/playwright-docker
+                docker pull mcr.microsoft.com/playwright:v1.51.0-noble
+                docker save mcr.microsoft.com/playwright:v1.51.0-noble > /tmp/playwright-docker/playwright.tar
 
             - name: Tests
               run: yarn test:ci
