--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,7 @@ jobs:
                 name: test-results
                 path: test-results/
                 retention-days: 7
+                if-no-files-found: ignore
 
             - uses: streetsidesoftware/cspell-action@v6
               with:
