--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,11 +66,12 @@ jobs:
               run: yarn test:ci
 
             - name: Upload test results
+              if: always() 
               uses: actions/upload-artifact@v4
               with:
                 name: test-results
                 path: test-results/
-                retention-days: 7
+                retention-days: 1
                 if-no-files-found: ignore
 
             - uses: streetsidesoftware/cspell-action@v6
