--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "test:e2e": "node scripts/run-playwright.js ",   
         "test:e2e:quick": "node scripts/run-playwright.js --grep-invert \"@Smoke\\|@Slow\"",     
         "test:e2e:smoke": "yarn test:e2e:docker:smoke",
-        "test:e2e:ui": "node scripts/run-playwright.js --ui",
+        "test:e2e:ui": "PW_UI=true node scripts/run-playwright.js --ui",
         "test:e2e:debug": "node scripts/run-playwright.js --debug",
         "test:ci": "yarn test:e2e:docker:smoke && node --experimental-vm-modules node_modules/.bin/jest",
         "test:e2e:docker": "scripts/run-playwright-in-docker.sh",
