--- a/assets/achievements/.gitattributes
+++ b/assets/achievements/.gitattributes
@@ -1,2 +1,1 @@
-wsc2025-grand-slam.png filter=lfs diff=lfs merge=lfs -text
-wsc2025.png filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
