--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,21 @@ jobs:
             - name: Start frontend server
               run: yarn vite &
 
-            - name: Wait for server
-              run: timeout 30 bash -c 'until curl -s http://localhost:8080 > /dev/null; do sleep 1; done'
+            - name: Set up Docker Buildx to pull Playwright image
+              uses: docker/setup-buildx-action@v3
+
+            - name: Pull Playwright image with cache
+              uses: docker/build-push-action@v6
+              with:
+                push: false
+                load: true
+                tags: ${{ env.PLAYWRIGHT_DOCKER }}
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
+                pull: true
+
+            - name: Check server ready, wait if needed
+              run: curl -s --retry 30 --retry-delay 1 --retry-all-errors http://localhost:8080 > /dev/null
 
             - name: Login to GitHub Container Registry
               uses: docker/login-action@v3
