--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,12 @@ npm-debug.log
 .yalc
 yalc.lock
 
+# Coverage directory used by Jest (yarn test --coverage)
+coverage
+
 # Playwright
 /test-results/
 /playwright-report/
 /blob-report/
-/playwright/.cache/
+/playwright/
+/e2e-tests/playwright/
