--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
 *.webm filter=lfs diff=lfs merge=lfs -text
+e2e-tests/smoke/smoketests.spec.ts-snapshots/initial-page-chromium-darwin.png filter=lfs diff=lfs merge=lfs -text
+e2e-tests/smoke/smoketests.spec.ts-snapshots/profile-page-chromium-darwin.png filter=lfs diff=lfs merge=lfs -text
